@@ -8,7 +8,6 @@
 
 package org.sosy_lab.java_smt.solvers.princess;
 
-import static com.google.common.collect.Iterables.getOnlyElement;
 import static scala.collection.JavaConverters.asJava;
 import static scala.collection.JavaConverters.collectionAsScalaIterableConverter;
 
@@ -48,16 +47,18 @@ import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeMap;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.Appender;
 import org.sosy_lab.common.Appenders;
@@ -123,8 +124,8 @@ class PrincessEnvironment {
   private final ShutdownNotifier shutdownNotifier;
 
   /**
-   * The wrapped API is the first created API. It will never be used outside of this class and never
-   * be closed. If a variable is declared, it is declared in the first api, then copied into all
+   * The wrapped API is the first created API. It will never be used outside this class and never be
+   * closed. If a variable is declared, it is declared in the first api, then copied into all
    * registered APIs. Each API has its own stack for formulas.
    */
   private final SimpleAPI api;
@@ -224,7 +225,7 @@ class PrincessEnvironment {
   }
 
   private File getAbsoluteParent(Path path) {
-    return Optional.ofNullable(path.getParent()).orElse(Paths.get(".")).toAbsolutePath().toFile();
+    return Optional.ofNullable(path.getParent()).orElse(Path.of(".")).toAbsolutePath().toFile();
   }
 
   int getMinAtomsForAbbreviation() {
@@ -232,7 +233,8 @@ class PrincessEnvironment {
   }
 
   void unregisterStack(PrincessAbstractProver<?, ?> stack) {
-    assert registeredProvers.contains(stack) : "cannot unregister stack, it is not registered";
+    Preconditions.checkState(
+        registeredProvers.contains(stack), "cannot unregister stack, it is not registered");
     registeredProvers.remove(stack);
   }
 
@@ -314,6 +316,15 @@ class PrincessEnvironment {
     throw (E) e;
   }
 
+  /**
+   * This method dumps a formula as SMTLIB2.
+   *
+   * <p>We avoid redundant sub-formulas by replacing them with abbreviations. The replacement is
+   * done "once" when calling this method.
+   *
+   * <p>We return an {@link Appender} to avoid storing larger Strings in memory. We sort the symbols
+   * and abbreviations for the export only "on demand".
+   */
   public Appender dumpFormula(IFormula formula, final PrincessFormulaCreator creator) {
     // remove redundant expressions
     // TODO do we want to remove redundancy completely (as checked in the unit
@@ -344,77 +355,134 @@ class PrincessEnvironment {
       }
 
       private void appendTo0(Appendable out) throws IOException {
-        // allVars needs to be mutable, but declaredFunctions should have deterministic order
         Set<IExpression> allVars =
-            ImmutableSet.copyOf(creator.extractVariablesAndUFs(lettedFormula, true).values());
-        Deque<IExpression> declaredFunctions = new ArrayDeque<>(allVars);
-        allVars = new HashSet<>(allVars);
+            new LinkedHashSet<>(creator.extractVariablesAndUFs(lettedFormula, true).values());
 
-        Set<String> doneFunctions = new HashSet<>();
-        Set<String> todoAbbrevs = new HashSet<>();
+        // We use TreeMaps for deterministic/alphabetic ordering.
+        // For abbreviations, we use the ordering, but dump nested abbreviations/dependencies first.
+        Map<String, IExpression> symbols = new TreeMap<>();
+        Map<String, IFunApp> ufs = new TreeMap<>();
+        Map<String, IExpression> usedAbbrevs = new TreeMap<>();
 
-        while (!declaredFunctions.isEmpty()) {
-          IExpression var = declaredFunctions.poll();
-          String name = getName(var);
+        collectAllSymbolsAndAbbreviations(allVars, symbols, ufs, usedAbbrevs);
 
-          // we don't want to declare variables twice, so doublecheck
-          // if we have already found the current variable
-          if (doneFunctions.contains(name)) {
-            continue;
-          }
-          doneFunctions.add(name);
-
-          // we do only want to add declare-funs for things we really declared
-          // the rest is done afterwards
-          if (name.startsWith("abbrev_")) {
-            todoAbbrevs.add(name);
-            Set<IExpression> varsFromAbbrev =
-                ImmutableSet.copyOf(
-                    creator.extractVariablesAndUFs(abbrevMap.get(var), true).values());
-            Sets.difference(varsFromAbbrev, allVars).forEach(declaredFunctions::push);
-            allVars.addAll(varsFromAbbrev);
-          } else {
-            out.append("(declare-fun ").append(SMTLineariser.quoteIdentifier(name));
-
-            // function parameters
-            out.append(" (");
-            if (var instanceof IFunApp) {
-              IFunApp function = (IFunApp) var;
-              List<String> argSorts =
-                  Lists.transform(asJava(function.args()), a -> getFormulaType(a).toSMTLIBString());
-              Joiner.on(" ").appendTo(out, argSorts);
-            }
-
-            out.append(") ");
-            out.append(getFormulaType(var).toSMTLIBString());
-            out.append(")\n");
-          }
+        // declare normal symbols
+        for (Entry<String, IExpression> symbol : symbols.entrySet()) {
+          out.append(
+              String.format(
+                  "(declare-fun %s () %s)%n",
+                  SMTLineariser.quoteIdentifier(symbol.getKey()),
+                  getFormulaType(symbol.getValue()).toSMTLIBString()));
         }
 
-        // now as everything we know from the formula is declared we have to add
-        // the abbreviations, too
-        for (Map.Entry<IExpression, IExpression> entry : abbrevMap.entrySet()) {
-          IExpression abbrev = entry.getKey();
-          IExpression fullFormula = entry.getValue();
-          String name =
-              getName(getOnlyElement(creator.extractVariablesAndUFs(abbrev, true).values()));
+        // declare UFs
+        for (Entry<String, IFunApp> function : ufs.entrySet()) {
+          List<String> argSorts =
+              Lists.transform(
+                  asJava(function.getValue().args()), a -> getFormulaType(a).toSMTLIBString());
+          out.append(
+              String.format(
+                  "(declare-fun %s (%s) %s)%n",
+                  SMTLineariser.quoteIdentifier(function.getKey()),
+                  Joiner.on(" ").join(argSorts),
+                  getFormulaType(function.getValue()).toSMTLIBString()));
+        }
 
-          // only add the necessary abbreviations
-          if (!todoAbbrevs.contains(name)) {
-            continue;
-          }
-
-          // the type of each abbreviation and the abbreviated formula
+        // now every symbol from the formula or from abbreviations are declared,
+        // let's add the abbreviations, too.
+        for (String abbrev : getOrderedAbbreviations(usedAbbrevs)) {
+          IExpression abbrevFormula = usedAbbrevs.get(abbrev);
+          IExpression fullFormula = abbrevMap.get(abbrevFormula);
           out.append(
               String.format(
                   "(define-fun %s () %s %s)%n",
-                  SMTLineariser.quoteIdentifier(name),
+                  SMTLineariser.quoteIdentifier(abbrev),
                   getFormulaType(fullFormula).toSMTLIBString(),
                   SMTLineariser.asString(fullFormula)));
         }
 
         // now add the final assert
         out.append("(assert ").append(SMTLineariser.asString(lettedFormula)).append(')');
+      }
+
+      /**
+       * determine all used symbols and all used abbreviations by traversing the abbreviations
+       * transitively.
+       *
+       * @param allVars will be updated with further symbols and UFs.
+       * @param symbols will be updated with all found symbols.
+       * @param ufs will be updated with all found UFs.
+       * @param abbrevs will be updated with all found abbreviations.
+       */
+      private void collectAllSymbolsAndAbbreviations(
+          final Set<IExpression> allVars,
+          final Map<String, IExpression> symbols,
+          final Map<String, IFunApp> ufs,
+          final Map<String, IExpression> abbrevs) {
+        final Deque<IExpression> waitlistSymbols = new ArrayDeque<>(allVars);
+        final Set<String> seenSymbols = new HashSet<>();
+        while (!waitlistSymbols.isEmpty()) {
+          IExpression var = waitlistSymbols.poll();
+          String name = getName(var);
+
+          // we don't want to declare variables twice
+          if (!seenSymbols.add(name)) {
+            continue;
+          }
+
+          if (isAbbreviation(var)) {
+            Preconditions.checkState(!abbrevs.containsKey(name));
+            abbrevs.put(name, var);
+            // for abbreviations, we go deeper and analyse the abbreviated formula.
+            Set<IExpression> varsFromAbbrev = getVariablesFromAbbreviation(var);
+            Sets.difference(varsFromAbbrev, allVars).forEach(waitlistSymbols::push);
+            allVars.addAll(varsFromAbbrev);
+          } else if (var instanceof IFunApp) {
+            Preconditions.checkState(!ufs.containsKey(name));
+            ufs.put(name, (IFunApp) var);
+          } else {
+            Preconditions.checkState(!symbols.containsKey(name));
+            symbols.put(name, var);
+          }
+        }
+      }
+
+      /**
+       * Abbreviations can be nested, and thus we need to sort them. The returned list (or iterable)
+       * contains each used abbreviation exactly once. Abbreviations with no dependencies come
+       * first, more complex ones later.
+       */
+      private Iterable<String> getOrderedAbbreviations(Map<String, IExpression> usedAbbrevs) {
+        ArrayDeque<String> waitlist = new ArrayDeque<>(usedAbbrevs.keySet());
+        Set<String> orderedAbbreviations = new LinkedHashSet<>();
+        while (!waitlist.isEmpty()) {
+          String abbrev = waitlist.removeFirst();
+          boolean allDependenciesFinished = true;
+          for (IExpression var : getVariablesFromAbbreviation(usedAbbrevs.get(abbrev))) {
+            String name = getName(var);
+            if (isAbbreviation(var)) {
+              if (!orderedAbbreviations.contains(name)) {
+                allDependenciesFinished = false;
+                waitlist.addLast(name); // part 1: add dependency for later
+              }
+            }
+          }
+          if (allDependenciesFinished) {
+            orderedAbbreviations.add(abbrev);
+          } else {
+            waitlist.addLast(abbrev); // part 2: add again for later
+          }
+        }
+        return orderedAbbreviations;
+      }
+
+      private boolean isAbbreviation(IExpression symbol) {
+        return abbrevMap.containsKey(symbol);
+      }
+
+      private Set<IExpression> getVariablesFromAbbreviation(IExpression var) {
+        return ImmutableSet.copyOf(
+            creator.extractVariablesAndUFs(abbrevMap.get(var), true).values());
       }
     };
   }
